--- a/sintaxe-variavel-fluxo/bin/.gitignore
+++ b/sintaxe-variavel-fluxo/bin/.gitignore
@@ -1,3 +1,7 @@
 /TestaPontoFlutuante.class
 /TestaVariaveis.class
 /TestaConversao.class
+/TestaCaracteres.class
+/TestaValores.class
+/TestaCondicional.class
+/TestaCondicional2.class
