--- a/sintaxe-variavel-fluxo/bin/.gitignore
+++ b/sintaxe-variavel-fluxo/bin/.gitignore
@@ -1,7 +1,8 @@
-/TestaPontoFlutuante.class
-/TestaVariaveis.class
-/TestaConversao.class
 /TestaCaracteres.class
-/TestaValores.class
 /TestaCondicional.class
 /TestaCondicional2.class
+/TestaConversao.class
+/TestaPontoFlutuante.class
+/TestaValores.class
+/TestaVariaveis.class
+/TestaEscopo.class
