--- a/sintaxe-variavel-fluxo/bin/.gitignore
+++ b/sintaxe-variavel-fluxo/bin/.gitignore
@@ -6,3 +6,8 @@
 /TestaValores.class
 /TestaVariaveis.class
 /TestaEscopo.class
+/TestaWhile.class
+/TestaSomatoria.class
+/TestaFor.class
+/TestaLaços.class
+/TestaLaços2.class
